# insurance-web-scraper

./: .coverage  .coveragerc  .env.example  Dockerfile  LICENSE  PRD.MD  README.md  cleaned_data_example.json  config.yaml.example  create_sample_pdf.py  dental_scraper  docker-compose.yml  extracted_data.json  process_sample.py  pyproject.toml  pytest.ini  requirements.txt  run_aetna_spider.py  sample_dental_guidelines.txt  setup.py  tasks.md  test_coverage_report.md
.cursor/rules/: black-best-practices.mdc  code-patterns.mdc  flake8-best-practices.mdc  pdfplumber-best-practices.mdc  pypdf2-best-practices.mdc  pytest-best-practices.mdc  scrappy-best-practices.mdc
Prompts/: copilot.md  error-loop.md  projectmanager.md  yolo-mode.md
auth/: __init__.py  config.py  handlers.py  storage.py  utils.py
dental-insurance-guidelines-web-scraper/: .gitignore  README.md
dental_scraper/: __init__.py  app.py  exceptions.py  settings.py
dental_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: api.md  configuration.md  installation.md  troubleshooting.md  usage.md
examples/: aetna_guidelines.json  data_cleaning_example.py
pdf_processor/: __init__.py  base.py  example.py  pdf_processor.py
schemas/: guidelines.json
tests/: README.md  conftest.py  test_app.py  test_base_spider.py  test_data_cleaner.py  test_download_handler.py  test_error_handling.py  test_integration.py  test_pdf_processor.py  test_pdf_processor_detailed.py  test_pdf_spider.py  test_rate_limiter.py  test_scrapers.py  test_url_management.py  test_validation.py
(+68 files in other folders)
